--- a/src/pages/cashout/style.scss
+++ b/src/pages/cashout/style.scss
@@ -31,7 +31,6 @@
   }
 
   &__additional-info {
-    position: relative;
     width: 500px;
     height: 737px;
     min-width: 500px;
@@ -97,8 +96,6 @@
     }
 
     &__token-price-wrapper {
-      position: absolute;
-      bottom: 0;
       width: 100%;
       height: 188px;
       padding: 32px;
@@ -129,6 +126,18 @@
     }
   }
 
+  @media #{$screen-max-lg} {
+    padding-bottom: 20px;
+
+    &__body {
+      flex-direction: column;
+    }
+
+    &__additional-info {
+      margin: 20px 0 0 0;
+    }
+  }
+
   @media #{$screen-max-md} {
     &__header {
       padding: 24px 20px 84px;
@@ -151,9 +160,58 @@
     &__body {
       padding: 0 20px;
     }
+  }
 
-    &__counter {
-      display: none;
+  @media (max-width: 550px) {
+    &__additional-info {
+      width: 335px;
+      height: auto;
+      min-width: unset;
+
+      &__header {
+        height: 56px;
+        padding: 16px 20px;
+
+        & > h2 {
+          font-family: $font-primary;
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0;
+        }
+      }
+
+      &__body {
+        padding: 20px;
+
+        &__title {
+          font-family: $font-primary;
+          font-size: 18px;
+          line-height: 24px;
+          letter-spacing: 0;
+        }
+
+        &__subtitle {
+          font-family: $font-primary;
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0;
+        }
+
+        &__button {
+          width: 100%;
+        }
+      }
+
+      &__token-price {
+        padding: 20px;
+
+        &__value {
+          font-family: $font-primary;
+          font-size: 40px;
+          line-height: 48px;
+          letter-spacing: 0;
+        }
+      }
     }
   }
 
