--- a/src/components/cashout-page/Form/style.scss
+++ b/src/components/cashout-page/Form/style.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: auto;
     margin-top: -76px;
-    background-color: #f2f5f9;
+    background-color: $c_catskill_white;
   }
 
   &__form {
@@ -69,7 +69,7 @@
         line-height: 20px;
         letter-spacing: -.4000000059604645px;
         color: $c_white;
-        background-color: #1f252e;
+        background-color: $c_ebony-clay;
         border-radius: 4px;
         opacity: 0;
         animation: fadein .3s ease-in-out .1s;
@@ -116,7 +116,7 @@
         font-size: 20px;
         line-height: 28px;
         letter-spacing: -.4000000059604645px;
-        border: 2px solid #f2f5f9;
+        border: 2px solid $c_catskill_white;
 
         &--number {
           &::-webkit-inner-spin-button,
@@ -136,7 +136,7 @@
           height: 100%;
           margin-left: -81px;
           color: #a5adb9;
-          border-left: 2px solid #f2f5f9;
+          border-left: 2px solid $c_catskill_white;
           fill: #a5adb9;
           place-items: center;
 
@@ -190,7 +190,7 @@
         font-size: 14px;
         line-height: 20px;
         letter-spacing: -.4000000059604645px;
-        color: #81858d;
+        color: $c_oslo-gray;
       }
 
       &__input-error {
@@ -241,17 +241,17 @@
       &__button {
         width: 100%;
         height: 60px;
-        background-color: #a7aeb7;
+        background-color: $c_grayc-chateau;
 
         &:hover {
-          background-color: #a7aeb7;
+          background-color: $c_grayc-chateau;
         }
 
         &--active {
           background-color: $c_blue-ribbon;
 
           &:hover {
-            background-color: #322af1;
+            background-color: $c_han_purple;
           }
         }
       }
@@ -313,15 +313,15 @@
         align-self: flex-end;
         width: 100%;
         height: 60px;
-        color: #4038ff;
+        color: $c_blue-ribbon;
         background-color: transparent;
-        border: 2px solid #4038ff;
+        border: 2px solid $c_blue-ribbon;
         justify-self: flex-end;
 
         &:hover {
-          color: #4038ff;
+          color: $c_blue-ribbon;
           background-color: transparent;
-          border: 2px solid #4038ff;
+          border: 2px solid $c_blue-ribbon;
         }
       }
     }
@@ -388,6 +388,7 @@
             letter-spacing: 0;
             color: #5c6475;
             background-color: $c_white;
+            opacity: 1 !important;
           }
 
           & > div {
