--- a/src/pages/cashout/style.scss
+++ b/src/pages/cashout/style.scss
@@ -91,7 +91,7 @@
         font-size: 18px;
         line-height: 24px;
         letter-spacing: 0;
-        border: 2px solid white;
+        border: 2px solid $c_white;
       }
     }
 
@@ -99,7 +99,7 @@
       width: 100%;
       height: 188px;
       padding: 32px;
-      border-top: 1px solid #322af1;
+      border-top: 1px solid $c_han_purple;
     }
 
     &__token-price {
