Rewrite cashout process in token q&a

--- a/src/components/token-page/TokenInformation/style.scss
+++ b/src/components/token-page/TokenInformation/style.scss
@@ -69,6 +69,10 @@
         &--active {
           display: block;
         }
+
+        & > ol {
+          margin: 10px 0;
+        }
       }
 
       &__icon {
