--- a/src/components/onboarding-page/CouncilResponsibilities/style.scss
+++ b/src/components/onboarding-page/CouncilResponsibilities/style.scss
@@ -50,7 +50,7 @@
     }
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__content {
       width: calc(90vw);
       margin: auto;
