--- a/src/components/onboarding-page/FMInterviews/style.scss
+++ b/src/components/onboarding-page/FMInterviews/style.scss
@@ -26,7 +26,7 @@
     margin: auto;
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__title {
       width: calc(90vw);
       font-size: 40px;
