--- a/src/components/onboarding-page/ReferallsInfo/style.scss
+++ b/src/components/onboarding-page/ReferallsInfo/style.scss
@@ -44,7 +44,7 @@
     }
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__content {
       flex-wrap: wrap;
       width: calc(90vw);
