--- a/src/components/onboarding-page/ValidatorsInfo/style.scss
+++ b/src/components/onboarding-page/ValidatorsInfo/style.scss
@@ -107,7 +107,7 @@
     }
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__title__wrapper {
       width: calc(90vw);
       padding: 0;
