--- a/src/components/onboarding-page/WorkingGroups/style.scss
+++ b/src/components/onboarding-page/WorkingGroups/style.scss
@@ -194,7 +194,7 @@
     }
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__content {
       width: calc(90vw);
       margin: auto;
