--- a/src/components/onboarding-page/BecomeFM/style.scss
+++ b/src/components/onboarding-page/BecomeFM/style.scss
@@ -229,7 +229,7 @@
     margin-top: 32px;
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__title__wrapper {
       width: calc(90vw);
       padding: 0;
