--- a/src/components/onboarding-page/ContributorInfo/style.scss
+++ b/src/components/onboarding-page/ContributorInfo/style.scss
@@ -107,7 +107,7 @@
     margin-top: 32px;
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
