--- a/src/components/onboarding-page/LessonList/style.scss
+++ b/src/components/onboarding-page/LessonList/style.scss
@@ -96,10 +96,6 @@
     &:hover {
       background: $c_blue-ribbon;
     }
-
-    &__icon {
-      background: $c_black;
-    }
   }
 
   &__title {
@@ -110,7 +106,7 @@
     color: $c_white;
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__backdrop {
       display: none;
     }
@@ -243,7 +239,7 @@
     }
   }
 
-  @media #{$screen-max-sm} {
+  @media #{$screen-max-xl} {
     &__wrapper {
       width: calc(90vw);
       padding-top: 10px;
@@ -275,9 +271,8 @@
     }
 
     &__progress {
-      width: calc(15vw);
       margin: 0;
-      margin-left: 8px;
+      margin-left: 20px;
     }
 
     &__title {
