--- a/src/components/onboarding-page/PioneerInfo/style.scss
+++ b/src/components/onboarding-page/PioneerInfo/style.scss
@@ -50,7 +50,7 @@
     margin-top: 32px;
   }
 
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__content {
       flex-wrap: wrap;
       width: calc(90vw);
