--- a/src/components/onboarding-page/VideoSection/style.scss
+++ b/src/components/onboarding-page/VideoSection/style.scss
@@ -152,17 +152,7 @@
     }
   }
 
-  @media #{$screen-max-lg} {
-    &__hero {
-      &__background {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
-  }
-
-  @media #{$screen-max-md} {
+  @media #{$screen-max-xl} {
     &__hero {
       width: calc(90vw);
       padding: 0;
