Change joy coins section button background on hover

--- a/src/components/index-page/EarnJOYCoins/style.scss
+++ b/src/components/index-page/EarnJOYCoins/style.scss
@@ -79,7 +79,7 @@
         background-color: $c_black;
 
         &:hover {
-          background-color: $c_black;
+          background-color: $c_ebony-clay;
         }
       }
     }
