--- a/src/pages/token/style.scss
+++ b/src/pages/token/style.scss
@@ -22,6 +22,10 @@
       width: 264px;
       height: 80px;
       margin-top: 32px;
+
+      &:hover {
+        background-color: $c_ebony-clay;
+      }
     }
 
     &__title {
