Add joystreamDAO and video platform sections of the primer page, other changes

--- a/src/components/primer-page/Header/style.scss
+++ b/src/components/primer-page/Header/style.scss
@@ -3,7 +3,10 @@
 .PrimerPage {
   &__header-wrapper {
     padding: 120px 0 215px 0;
+    background: url('../../../assets/svg/primer/header-background-desktop.svg');
     background-color: $c_black;
+    background-position: 45% 75%;
+    background-repeat: no-repeat;
   }
 
   &__header {
