--- a/src/components/primer-page/WhyWeExist/style.scss
+++ b/src/components/primer-page/WhyWeExist/style.scss
@@ -8,5 +8,65 @@
 
   &__why-we-exist {
     @extend %container;
+
+    &__section-title {
+      font-family: $font-secondary;
+      font-size: 14px;
+      font-weight: 300;
+      line-height: 20px;
+      letter-spacing: .04em;
+      color: $c_white;
+      text-align: left;
+    }
+
+    &__title {
+      margin-top: 24px;
+      font-family: $font-primary;
+      font-size: 48px;
+      font-weight: 400;
+      line-height: 56px;
+      letter-spacing: 0;
+      color: $c_white;
+      text-align: left;
+    }
+
+    &__section {
+      display: flex;
+      flex-direction: row;
+      gap: 139px;
+
+      &--reverse {
+        flex-direction: row-reverse;
+      }
+
+      &--lock {
+        margin-top: 105px;
+        gap: 183px;
+      }
+
+      &__text {
+        &__title {
+          max-width: 692px;
+          font-family: $font-primary;
+          font-size: 32px;
+          font-weight: 400;
+          line-height: 40px;
+          letter-spacing: 0;
+          color: $c_white;
+          text-align: left;
+        }
+
+        &__paragraph {
+          margin-top: 24px;
+          font-family: $font-secondary;
+          font-size: 20px;
+          font-weight: 400;
+          line-height: 28px;
+          letter-spacing: 0;
+          color: $c_white;
+          text-align: left;
+        }
+      }
+    }
   }
 }
