--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -160,11 +160,12 @@
     display: flex;
     flex-direction: column;
     margin: auto 0;
+    padding-right: 32px;
 
     &__section-items {
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-between;
       gap: 24px;
     }
 
@@ -286,10 +287,12 @@
       flex-direction: column;
       width: 100%;
       background-color: $c_blue-ribbon;
+      visibility: hidden;
       transform: translateY(0);
       transition: transform 400ms ease 0s;
 
       &--open {
+        visibility: visible;
         transform: translateY(100%);
       }
     }
@@ -402,5 +405,36 @@
         animation-duration: $duration;
       }
     }
+  }
+
+  @media (max-width: 1100px) {
+    &__container--primer {
+      flex-direction: column;
+    }
+  }
+
+  @media (max-width: 900px) {
+    &__container--primer {
+      overflow-x: hidden;
+    }
+
+    &__primer-section {
+      width: 900px;
+      overflow-x: hidden;
+
+      &__section-items {
+        gap: 16px;
+      }
+
+      &__section-item {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+.Navbar--hidden.Navbar--primer {
+  @media (max-width: 1100px) {
+    top: -124px;
   }
 }
