--- a/src/components/primer-page/Header/style.scss
+++ b/src/components/primer-page/Header/style.scss
@@ -3,7 +3,7 @@
 .PrimerPage {
   &__header-wrapper {
     padding: 120px 0 215px 0;
-    background: url('../../../assets/svg/primer/header-background-desktop.svg');
+    background: url('../../../assets/svg/primer/backgrounds/header-desktop.svg');
     background-color: $c_black;
     background-position: 45% 75%;
     background-repeat: no-repeat;
@@ -31,6 +31,66 @@
       letter-spacing: 0;
       color: #a7aeb7;
       text-align: center;
+    }
+  }
+
+  @media #{$screen-max-lg} {
+    &__header-wrapper {
+      padding: 100px 0 150px 0;
+      background-position: 45% 70%;
+      background-size: 750px;
+    }
+  }
+
+  @media #{$screen-max-md} {
+    &__header {
+      &__title {
+        font-size: 53px;
+        line-height: 60px;
+      }
+    }
+  }
+
+  @media #{$screen-max-sm} {
+    &__header {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      &__title {
+        max-width: 350px;
+      }
+    }
+  }
+
+  @media (max-width: 500px) {
+    &__header-wrapper {
+      padding: 100px 0 118px 24px;
+      background: url('../../../assets/svg/primer/backgrounds/header-mobile.svg');
+      background-color: $c_black;
+      background-position: left 45px bottom 56px;
+      background-repeat: no-repeat;
+    }
+
+    &__header {
+      align-items: unset;
+
+      &__title {
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 40px;
+        letter-spacing: 0;
+        text-align: left;
+      }
+
+      &__subtitle {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 28px;
+        letter-spacing: 0;
+        color: #5c6475;
+        text-align: left;
+      }
     }
   }
 }
