--- a/src/components/primer-page/ChooseYourOwnAdventure/style.scss
+++ b/src/components/primer-page/ChooseYourOwnAdventure/style.scss
@@ -2,6 +2,7 @@
 
 .PrimerPage {
   &__choose-your-adventure-wrapper {
+    padding-top: 260px;
     background-color: $c_black;
   }
 
@@ -11,7 +12,6 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-top: 260px;
 
     &__title {
       font-family: $font-primary;
@@ -56,12 +56,13 @@
       }
 
       &__image {
-        display: grid;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         margin-right: 32px;
         padding: 20px;
         background-color: #1b1a45;
         border-radius: 50%;
-        place-items: center;
       }
 
       &__title {
@@ -82,13 +83,21 @@
       &__cta {
         display: flex;
         align-items: center;
-        font-family: $font-primary;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0;
-        color: $c_blue-ribbon;
-        text-align: right;
+
+        &__text {
+          font-family: $font-primary;
+          font-size: 20px;
+          font-weight: 400;
+          line-height: 24px;
+          letter-spacing: 0;
+          color: $c_blue-ribbon;
+          text-align: right;
+        }
+
+        &__arrow-wrapper {
+          display: grid;
+          place-items: center;
+        }
 
         &__arrow {
           margin-left: 8px;
@@ -99,7 +108,15 @@
   }
 
   @media #{$screen-max-lg} {
+    &__choose-your-adventure-wrapper {
+      padding-top: 150px;
+    }
+
     &__choose-your-adventure {
+      &__subtitle {
+        padding: 0 20px;
+      }
+
       &__list {
         display: flex;
         flex-direction: column;
@@ -112,14 +129,87 @@
   }
 
   @media #{$screen-max-sm} {
+    &__choose-your-adventure-wrapper {
+      padding: 56px 24px 0 24px;
+    }
+
     &__choose-your-adventure {
+      &__title {
+        font-family: $font-primary;
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 34px;
+        letter-spacing: 0;
+        text-align: center;
+      }
+
+      &__subtitle {
+        max-width: 500px;
+        margin-top: 16px;
+        padding: 0;
+        font-family: $font-secondary;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0;
+        text-align: center;
+      }
+
       &__list {
         display: flex;
         flex-direction: column;
+        margin-top: 32px;
       }
 
       &__list-item {
-        max-width: 600px;
+        max-width: 450px;
+        padding: 16px;
+
+        &:hover {
+          cursor: unset;
+          transform: unset;
+          box-shadow: unset;
+        }
+
+        &__image {
+          width: 48px;
+          height: 48px;
+          min-width: 48px;
+          min-height: 48px;
+          margin-right: 16px;
+          padding: 0;
+
+          & > svg {
+            transform: scale(.6);
+          }
+        }
+
+        &__title {
+          font-size: 20px;
+          line-height: 28px;
+          letter-spacing: 0;
+        }
+
+        &__bottom {
+          margin-top: 16px;
+        }
+
+        &__cta {
+          &__text {
+            display: none;
+          }
+
+          &__arrow-wrapper {
+            width: 48px;
+            height: 40px;
+            background-color: #20252d;
+          }
+
+          &__arrow {
+            margin-right: 6px;
+            color: $c_white;
+          }
+        }
       }
     }
   }
